horizontal scrollba FIX #2

--- a/master.css
+++ b/master.css
@@ -389,10 +389,10 @@ box-shadow: inset 0 0 10px 0 #676666, 0 1px 5px 0 rgba(0, 0, 0, .2);*/ text-shad
 #list-of-people li h3 { float: left; margin-top: 14px; font-size: 18px; color: #7d7d7d; font-family: "Adelle"; font-weight: 600; }
 #list-of-people li h4 { float: left; width: 150px;  padding-top: 7px; font-size: 16px; color: #b3b3b3; font-weight: 300; line-height: 18px; }
 #list-of-people li div { display: none; width: 400px; padding: 20px; margin: 0px 0 0 0; position: absolute; top: 91px;  z-index: 99999; background: #fff; color: #444; border: 4px solid rgba(255,255,255,.8); box-shadow: 0 2px 10px 1px #CCC; line-height: 1.3em; }
+.about-us #serdargokcen div,.about-us #sametbasaran div { left: -168px; }
 
-	/* Nav responsiveness */
-	@media only screen and (max-width: 1220px) { .about-us #list-of-people { width: 900px; left: 40px; } .about-us #footer { margin-top: 480px; } }
-	@media only screen and (max-width: 1220px) { .about-us #danieltin div,.about-us #oskansavli div,.about-us #suataaldan div { left: -168px; } }
+	/* list-of-people responsiveness */
+	@media only screen and (max-width: 1220px) { .about-us #list-of-people { width: 900px; left: 40px; } .about-us #footer { margin-top: 480px; } .about-us #danieltin div,.about-us #oskansavli div,.about-us #suataaldan div { left: -168px; } .about-us #serdargokcen div,.about-us #sametbasaran div { left: 0; } }
 
 #list-of-people li a:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 
